fix(frontend): fix menu overflow bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 html,
 body {
+  width: 100vw;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
